2010-10-09  Robert Larice
 * src/include/complex.h :
    !REVERT! remove typedef for _complex, which is used nowhere
    this breaks MSVC, currently unkown why, FIXME

2010-10-09  Robert Larice
 * src/frontend/parse-bison.c ,
 * src/frontend/parse-bison.h ,
 * src/spicelib/parser/inpptree-parser.c ,
 * src/spicelib/parser/inpptree-parser.h :
    update the bison generated files

2010-10-09  Robert Larice
 * src/frontend/parse-bison.y ,
 * src/spicelib/parser/inpptree-parser.y :
    avoid function redeclaration, PPparse() and PTparse()

2010-10-09  Robert Larice
 * src/frontend/define.c ,
 * src/frontend/evaluate.c ,
 * src/frontend/parse-bison.y ,
 * src/frontend/parse.c ,
 * src/include/fteparse.h :
    add `PT_OP_' prefix to avoid name collision (END, PLUS, MINUS, ...)

2010-10-09  Robert Larice
 * src/frontend/com_cdump.c ,
 * src/frontend/com_chdir.c ,
 * src/frontend/com_dump.c ,
 * src/frontend/com_echo.c ,
 * src/frontend/com_ghelp.c ,
 * src/frontend/com_rehash.c ,
 * src/frontend/com_setscale.c ,
 * src/frontend/com_shell.c ,
 * src/frontend/com_shift.c ,
 * src/frontend/com_state.c ,
 * src/frontend/parser/unixcom.c ,
 * src/frontend/streams.c ,
 * src/frontend/streams.h ,
 * src/frontend/variable.c :
    collect cp_* prototypes / extern-declarations in "cpextern.h"

2010-10-09  Robert Larice
 * src/ciderlib/input/dopset.c :
    additional #includes for prototype visibility

2010-10-09  Robert Larice
 * src/include/ciderinp.h ,
 * src/spicelib/devices/nbjt/nbjtset.c ,
 * src/spicelib/devices/numd/numdset.c :
    collect MESH*() prototypes in "meshext.h"

2010-10-09  Robert Larice
 * src/spicelib/devices/bsim4/b4geo.c ,
 * src/spicelib/devices/bsim4v2/b4v2geo.c ,
 * src/spicelib/devices/bsim4v3/b4v3geo.c ,
 * src/spicelib/devices/bsim4v4/b4v4geo.c ,
 * src/spicelib/devices/bsim4v5/b4v5geo.c :
    include bsim4*def.h  (bsim4*geo.c files)

2010-10-09  Robert Larice
 * src/spicelib/devices/bsim4/b4set.c ,
 * src/spicelib/devices/bsim4/b4temp.c ,