@@ -86,17 +86,7 @@ CKTnewTask(CKTcircuit *ckt, TSKtask **taskPtr, IFuid taskName, TSKtask **defPtr)
         tsk->TSKlteReltol = 1e-3;
         tsk->TSKlteAbstol = 1e-6;
 #endif /* NEWTRUNC */
-
-/* gtri - modify - 4/17/91 - wbk - Change trtol default */
-#ifdef XSPICE
-/* Lower default value of trtol to give more accuracy */
-/*    tsk->TSKtrtol = 7;  */
-    tsk->TSKtrtol = 1;
-/* gtri - modify - 4/17/91 - wbk - Change trtol default */
-#else
         tsk->TSKtrtol = 7;
-#endif /* XSPICE */
-
         tsk->TSKbypass = 0;
         tsk->TSKtranMaxIter = 10;
         tsk->TSKdcMaxIter = 100;
